--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <img src="images/editor.jpg" alt="Profile Picture" class="profile-picture">
 
     <!-- Bio Section -->
-    <section id="bio">
+    <section id="bio" class="textbox">
       <p>
          <strong>
     Siphosenkosi Mlotshwa, a seasoned Software Engineer currently leading technological
@@ -86,7 +86,13 @@
     <!-- Elevator Pitch Section (Placeholder Image) -->
     <section id="elevator-pitch">
       <h2>Elevator Pitch</h2>
-      <img src="images/orange.jpg" alt="Elevator Pitch Placeholder Image">
+      <div class="elevator">
+          <a href="https://youtu.be/TfnZ5_4zLFs" target="_blank">
+          <img src="images/orange.jpg" alt="Elevator Pitch Placeholder Image">
+      </a>
+
+      </div>
+      
     </section>
 
   </section>
