--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     <ul>
       <li><a href="https://www.linkedin.com/in/siphosenkosi-mlotshwa/" target="_blank">LinkedIn</a></li>
       <li><a href="https://www.instagram.com/1heavy0/" target="_blank">Instagram</a></li>
+      <li><a href="https://www.twitter.com/1heavy0/" target="_blank">Twitter</a></li>
     </ul>
   </footer>
 
